# home-appliance-diagnostic-agent

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/api/: chat.py  httpserver.py  request_context.py
app/db/: database.py  mixins.py
app/db/models/: __init__.py  base.py
app/entities/api_entities/: __init__.py  chat.py  technician.py
app/entities/service_entities/: __init__.py  common.py  session.py
app/middleware/: __init__.py  request_response_logger_middleware.py
app/prompts/: __init__.py
app/repositories/: appointment_repository.py  availability_slot_repository.py  knowledge_repository.py  session_repository.py  technician_repository.py
app/routes/: media.py  sessions.py  technicians.py  twilio.py
app/services/: __init__.py  diagnostics_service.py  email_service.py  scheduling_service.py  session_service.py  technician_service.py  vision_service.py
app/settings/: __init__.py
app/utils/: __init__.py  ingest.py  logger_utils.py  prompt.py  twiml_builder.py
app/utils/speech/: stt.py  tts.py
docs/: TECHNICAL.md  dryer_repair.txt  fridge_repair.txt  washer_repair.txt
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_call_sid_to_appointments.py  ef5e75384a39_create_tables.py
nginx/: nginx.conf
scripts/: init_db.sql  seed.py
