[project]
name = "appliance-diagnosis"
version = "0.1.0"
description = "SHS Appliance Diagnostic Agent — unified backend + voice platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
    "openai>=1.51.0",
    "pgvector>=0.3.0",
    "twilio>=9.3.0",
    "redis>=7.3.0",
    "httpx>=0.28.1",
]
